--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
           <span class="spec-label">vCPU</span><span class="spec-val">18</span>
           <span class="spec-label">RAM</span><span class="spec-val">32 GB DDR5</span>
           <span class="spec-label">DISK</span><span class="spec-val">250 GB SSD + 1 TB NVMe</span>
-          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.x.x</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.0.150</span>
         </div>
       </div>
       <!-- CP2: HP 396 -->
@@ -662,7 +662,7 @@
           <span class="spec-label">vCPU</span><span class="spec-val">8</span>
           <span class="spec-label">RAM</span><span class="spec-val">32 GB DDR4</span>
           <span class="spec-label">DISK</span><span class="spec-val">250 GB SSD</span>
-          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.x.x</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.0.151</span>
         </div>
       </div>
       <!-- CP3: HP 215 -->
@@ -675,7 +675,7 @@
           <span class="spec-label">vCPU</span><span class="spec-val">8</span>
           <span class="spec-label">RAM</span><span class="spec-val">32 GB DDR5</span>
           <span class="spec-label">DISK</span><span class="spec-val">250 GB SSD</span>
-          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.x.x</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.0.152</span>
         </div>
       </div>
     </div>
@@ -693,7 +693,7 @@
           <span class="spec-label">vCPU</span><span class="spec-val">16</span>
           <span class="spec-label">RAM</span><span class="spec-val">96 GB DDR5</span>
           <span class="spec-label">DISK</span><span class="spec-val">128 GB SSD + 1 TB NVMe</span>
-          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.x.x</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.0.155</span>
         </div>
       </div>
       <!-- Worker 2: K12 -->
@@ -706,7 +706,7 @@
           <span class="spec-label">vCPU</span><span class="spec-val">16</span>
           <span class="spec-label">RAM</span><span class="spec-val">32 GB DDR5</span>
           <span class="spec-label">DISK</span><span class="spec-val">128 GB SSD + 1 TB NVMe</span>
-          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.x.x</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.0.160</span>
         </div>
       </div>
     </div>
