--- a/index.html
+++ b/index.html
@@ -545,6 +545,7 @@
           <span class="spec-label">CPU</span><span class="spec-val">Intel i5-7260U @ 2.20 GHz · 4 vCPU</span>
           <span class="spec-label">RAM</span><span class="spec-val">8 GB DDR4</span>
           <span class="spec-label">DISK</span><span class="spec-val">250 GB SSD</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 192.168.8.206</span>
         </div>
         <div class="nic-row">
           <div class="nic-badge nic1">
