--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
           <span class="spec-label">vCPU</span><span class="spec-val">4</span>
           <span class="spec-label">RAM</span><span class="spec-val">12 GB DDR5</span>
           <span class="spec-label">DISK</span><span class="spec-val">512 GB SSD</span>
-          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.x.x</span>
+          <span class="spec-label">NET</span><span class="spec-val">DHCP 10.0.0.145</span>
         </div>
       </div>
     </div>
