--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
           </div>
           <div class="nic-badge nic2">
             <div class="nic-dot" style="background:var(--switch-color)"></div>
-            NIC-2: → L2 Network Switch
+            NIC-2: → L2 Network Switch (10.0.0.1 DHCP)
           </div>
         </div>
       </div>
