--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
       <div class="router-header">
         <div class="router-icon">📡</div>
         <div>
-          <div class="router-title">Router / Gateway</div>
+          <div class="router-title">GLI GL-MT3000 Router / Gateway</div>
           <div class="router-sub">NAT · Firewall · DHCP Server</div>
         </div>
       </div>
